Closed Bug 476983 Opened 15 years ago Closed 15 years ago

GC::CleanStack() doesn't clean the stack clearly on sparc.

Categories

(Tamarin Graveyard :: Garbage Collection (mmGC), defect)

Sun
Solaris
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: leon.sha, Assigned: leon.sha)

Details

Attachments

(1 file)

1807 running as3/AbcDecoder/accessSpecifiers.as
   Assertion failed: "((ref->get() == 0))" ("/export/home/leon.sha/uild/tamarin-redux/MMgc/GCTests.cpp":95)
   FAILED contained no testcase messages - reason: Assertion failed: "((ref->get() == 0))" ("/export/home/leon.sha/uild/tamarin-redux/MMgc/GCTests.cpp":95) | Abort - core dumped
   FAILED passes:0 fails:1 unexpected passes: 0 expected failures: 0

Sparc has n (normally is 8) register windows.They hold the regist O0-O7, L0-L7. When future function call happened, these registers may be put into the stack. We need to clean them all.
Attached patch patchSplinter Review
Assignee: nobody → leon.sha
Attachment #360647 - Flags: review?(rreitmai)
Flags: flashplayer-triage+
So I could have sworn I saw this exact assert yesterday on a MacOS build...
Attachment #360647 - Flags: review?(rreitmai) → review+
Pushed.
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Resolved fixed engineering / work item that has been pushed.  Setting status to verified.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: