 Bug 476983 GC::CleanStack() doesn't clean the stack clearly on sparc