MMgc/GC.cpp
@@ -96,6 +96,39 @@
 extern "C" greg_t _getsp(void);
 #endif
 
+#ifdef MMGC_SPARC
+extern "C" {
+void sparc_clean_windows()
+{
+	asm(
+		"  cmp %i7, %o7 \n"
+		"  be 2f\n"
+		"  clr %o0\n"
+		"  cmp %o7, 0\n"
+		"  be 1f\n"
+		"  clr %o1\n"
+		"  call sparc_clean_windows\n"
+		"  nop\n"
+		"1:clr %o2\n"
+		"  clr %o3\n"
+		"  clr %o4\n"
+		"  clr %o5\n"
+		"  clr %o7\n"
+		"  clr %l0\n"
+		"  clr %l1\n"
+		"  clr %l2\n"
+		"  clr %l3\n"
+		"  clr %l4\n"
+		"  clr %l5\n"
+		"  clr %l6\n"
+		"  clr %l7\n"
+		"2:nop\n"
+		);
+}
+}
+#endif
+
+
 // Werner mode is a back pointer chain facility for Relase mode
 //#define WERNER_MODE
 
@@ -1356,6 +1389,9 @@ bail:
 			void *stack = alloca(amount);
 			if(stack) {
 				VMPI_memset(stack, 0, amount);
+#ifdef MMGC_SPARC
+				sparc_clean_windows();
+#endif
 			}
 		}
 #endif // __MSC_VER && _DEBUG
